# success2025

./: .gitignore  CMakeLists.txt  config.yaml  readme.md
cfg/: 1056X640_6ms.config  1280X1240_6ms.config  1280X640_6ms.config  337kh.config  337low.config  337ruan.config  ROI.config  camera.config  conti.config  hand.config  net.config  net2.config  opencv_traditional.config
document/: RM_visio.vsdx
script/: blink_led.sh  setup.sh
script/Camera/Data/: 043041420103.mvdat
src/: main.cpp
src/RTSP/: RTSPStreamer.cpp  RTSPStreamer.hpp
src/app/: ConfigurationReader.hpp  ThreadPool.h
src/app/api/: Observer.hpp  picture.hpp
src/cuda/: inRange_gpu.cu  inRange_gpu.cuh
src/hardware/api/: camera.cpp  camera.hpp
src/hardware/can/: can.cpp  can.hpp  canbus.cpp  canbus.hpp
src/hardware/gpio/: GPIO.cpp  GPIO.hpp
src/hardware/uart/: Serial_Port.h  Serial_Port_Linux.c  modbus.c  modbus.h
src/process/: enemy_Inform.hpp  predict.cpp  predict.hpp  process_opencv.cpp  process_opencv.hpp
src/utils/: cout.h
src/utils/KalmanFilter/: kalman.cpp  kalman.hpp
src/yolo/: yolov8.cpp  yolov8.hpp
